[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "click",
    "watchfiles",
    'setproctitle',
]

[project.scripts]
dev-server = "devserver.cli:cli"

[tool.ruff]
line-length = 100

# https://beta.ruff.rs/docs/rules/
select = [
    "C",       # complexity
    "E",       # pycodestyle
    "F",       # Unused imports
    "I",       # isort
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "S103",    # bad-file-permissions
    "TRY004",  # Prefer TypeError exception for invalid type
    "UP",      # pyupgrade
    "W",       # pycodestyle
]
ignore = [
    'E501', # Let black handle length
]

[tool.ruff.isort]
known-first-party = ["devserver"]
